# clueAI

./: .env  .env.example  .gitignore  Dockerfile  PDR.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  refactor.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: Spring-develop-CD.yml  fastapi-CD.yml  fastapi-CI.yaml  spring-ci.yaml
app/: main.py
app/config/: config.py  database.py
app/controller/: AgentController.py  ChatController.py  HealthCheck.py  QuizController.py  __init__.py
app/core/: config.py
app/llm/: gemini_service.py
app/model/: AgentModel.py  Document.py  QuizModel.py
app/repository/: DocumentRepository.py
app/service/: AgentService.py
app/services/: chroma_service.py  document_content_service.py  langchain_service.py  multimodal_service.py  quiz_service.py
tests/: test_database.py
