[project]
name = "clueai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.1.1",
    "dotenv>=0.9.9",
    "fastapi>=0.118.3",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "pydantic>=2.12.0",
    "redis>=6.4.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
    "uvicorn>=0.37.0",
]
